请假表单、微信公众号部分更新

--- a/EmpInfo/Views/Account/Login.cshtml
+++ b/EmpInfo/Views/Account/Login.cshtml
@@ -367,6 +367,9 @@
                 <p class="text-info small">
                     <i class="fa fa-android"></i> 安卓APP版本：<a href="@ViewData["appUrl"]" target="_blank">点此下载</a>
                 </p>
+                <p class="text-danger small">
+                    <i class="fa fa-info-circle"></i> 关注并绑定[信利e家]微信公众号后，可在微信端免密登陆此系统
+                </p>
             </div>
         </div>
     </div>
