--- a/EmpInfo/Views/Home/CheckDormitory.cshtml
+++ b/EmpInfo/Views/Home/CheckDormitory.cshtml
@@ -43,6 +43,7 @@
         <ol class="breadcrumb" style="margin:0;padding:0; background-color:transparent;">
             <li><span class="glyphicon glyphicon-hand-right"></span></li>
             <li><a href="@Url.Content("~/Home/Index")">主页</a></li>
+            <li><a href="@Url.Content("~/Home/DormGroupIndex")">宿舍事务集合</a></li>
             <li class="active">当前住宿状态</li>
         </ol>          
     </div>
