--- a/EmpInfo/Views/Shared/_MessageDialog.cshtml
+++ b/EmpInfo/Views/Shared/_MessageDialog.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="modal fade" id="MessageModal" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="MessageModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-sm">
+    <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
